# Pulse.

./: .gitignore  IMPLEMENTATION_PLAN.md  LICENSE  README.md  index.html  package.json
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/call_engine/: audio.rs  engine.rs  mod.rs
src-tauri/src/crypto/: keypair.rs  mod.rs
src-tauri/src/database/: contacts.rs  mod.rs
src-tauri/src/signaling/: client.rs  messages.rs  mod.rs
src/components/: AddContactModal.ts  AudioVisualizer.ts  CallScreen.ts  ConfirmModal.ts  ContactList.ts  ContextMenu.ts  IncomingCall.ts  LoginScreen.ts  LogoPresentation.ts  SettingsModal.ts  TitleBar.ts
src/services/: tauri-api.ts
src/styles/: main.css
src/types/: index.ts
