[package]
name = "pulse"
version = "0.1.0"
description = "A serverless P2P voice call application"
authors = ["You"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "call_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ============================================================================
# TAURI CORE
# ============================================================================
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# ============================================================================
# ASYNC RUNTIME
# ============================================================================
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# ============================================================================
# SERIALIZATION
# ============================================================================
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ============================================================================
# CRYPTOGRAPHY (Ed25519)
# ============================================================================
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"

# ============================================================================
# WEBSOCKET CLIENT
# ============================================================================
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
url = "2"

# ============================================================================
# WEBRTC
# ============================================================================
webrtc = "0.11"

# ============================================================================
# AUDIO
# ============================================================================
cpal = "0.15"
ringbuf = "0.4"
# Opus-Codec für beste Audio-Qualität (erfordert vcpkg setup):
# 1. git clone https://github.com/microsoft/vcpkg
# 2. cd vcpkg && bootstrap-vcpkg.bat
# 3. vcpkg install opus:x64-windows
# 4. set VCPKG_ROOT=C:\path\to\vcpkg
# audiopus = "0.3.0-rc.0"

# ============================================================================
# DATABASE
# ============================================================================
rusqlite = { version = "0.32", features = ["bundled"] }

# ============================================================================
# UTILITIES
# ============================================================================
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
parking_lot = "0.12"
once_cell = "1"
directories = "5"
tauri-plugin-single-instance = "2.4.0"

# ============================================================================
# AUTO-UPDATE (Meilenstein 4 - wird später aktiviert)
# ============================================================================
# tauri-plugin-updater = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
